--- a/.github/workflows/full install.yml
+++ b/.github/workflows/full install.yml
@@ -1,5 +1,6 @@
 name: full install and tests
 # Пример для проекта на Node.js
+on: push
 jobs:
   build: # имя взято для примера
     runs-on: ubuntu-latest
