Created new workflow

--- a/.github/workflows/full install.yml
+++ b/.github/workflows/full install.yml
@@ -9,13 +9,13 @@ jobs:
       # Клонируем репозиторий
       - uses: actions/checkout@v2
       # Устанавливаем Node.js
-      - uses: actions/setup-node@v1
+      - run: make setup
       # Ставим зависимости
-      - run: npm install
+      - run: make start
       # Запускаем линтер
-      - run: npm run lint
+      - run: make lint
       # Запускаем тесты
       # у шагов может быть имя, иногда это помогает отладке
       # имя выводится на Github при просмотре сборки
       - name: run tests
-        run: npm test # name и run относятся к одной задаче, поэтому дефис ставится только перед name
+        run: make test # name и run относятся к одной задаче, поэтому дефис ставится только перед name
